--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
     /* Estilos para a descrição do produto */
     .product-description {
-      color: #895109;
+      color: #000000;
       font-size: 1rem;
       line-height: 1.6;
       margin-bottom: 1rem;
@@ -275,7 +275,7 @@
     .modal-content {
       border-radius: 25px;
       border: none;
-      box-shadow: 0 20px 60px #895109;
+      box-shadow: 0 20px 60px #393737;
       overflow: hidden;
     }
 
@@ -298,7 +298,7 @@
     /* Estilos para o corpo do modal */
     .modal-body {
       padding: 3rem;
-      background: linear-gradient(135deg, #895109 0%, #fcfbff 100%);
+      background: linear-gradient(135deg, #393737 0%, #fcfbff 100%);
     }
 
     /* Estilos para a descrição do modal */
@@ -310,7 +310,7 @@
 
     /* Estilos para o botão de fechar do modal */
     .btn-close {
-      background: #a96001;
+      background: #393737;
       border-radius: 50%;
       opacity: 1;
       font-size: 1.2rem;
@@ -318,7 +318,7 @@
 
     /* Estilos para o botão de fechar personalizado */
     .close-btn {
-      background: linear-gradient(45deg, #a96001, #a96001); /* Um gradiente mais vibrante */
+      background: linear-gradient(45deg, #393737, #393737); /* Um gradiente mais vibrante */
       border: none;
       color: white;
       padding: 1rem 2rem;
@@ -749,3 +749,4 @@
 </body>
 </html>
  
+
