--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
     <!-- ============================= -->
     <section id="Menu" class="fade-in-up">
       <h2 class="section-title">
-        <i class="fas fa-cocktail me-3"></i>Menu Laranjeiras</h2>
+        <i class="fas fa-cocktail me-3"></i>Menu Inova</h2>
       <!-- Grid de produtos para o menu -->
       <div class="product-grid">
         <!-- Cartão de produto: CAIPIROSKAS -->
@@ -613,7 +613,7 @@
           <i class="fas fa-leaf product-icon"></i>
           <div class="category-badge">Coquetéis Com Álcool</div>
           <h3 class="product-title">Maracujá</h3>
-          <p class="product-description">Maracujá • Vodka • Açucar • Leite</p>
+          <p class="product-description">Maracujá • Vodka • Açucar</p>
         </div>
 
         <!-- Cartão de produto: Mix Estação -->
